2007-10-30  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-icon-canvas-item.c:
        (real_map_pixbuf):
	Fix indentation
	
        * src/file-manager/Makefile.am:
        * src/file-manager/fm-icon-view.c:
        * src/file-manager/nautilus-audio-mime-types.h:
	Replace audio preview code with new one based
	on gst-launch, removing all the gnome-vfs code

2007-10-29  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-dnd.c:
	Remove gnome-vfs code

2007-10-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
        * libnautilus-private/nautilus-file-operations.c:
	Move public gnome-vfs functions from file-utilities to internal
	calls in file-operations.c
	Replace gnome-vfs use with gio
	
        * libnautilus-private/nautilus-file-operations-progress.c:
        * src/file-manager/fm-tree-view.c:
	Replace gnome-vfs use with gio

2007-10-29  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-operations.[ch]:
	Move nautilus_file_operations_delete to the gio code.

        * src/file-manager/fm-directory-view.c:
        * src/file-manager/fm-tree-view.c:
	Update to use new nautilus_file_operations_delete

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

        * libnautilus-private/nautilus-module.c:
	Fix valgrind warning on shutdown (#346401, ported from trunk).

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-directory.c:
	* libnautilus-private/nautilus-desktop-link.c:
	* libnautilus-private/nautilus-desktop-icon-file.c:
	* libnautilus-private/nautilus-bookmark.c:
	* libnautilus-private/nautilus-trash-monitor.c:
	* libnautilus-private/nautilus-file.c:
	Plug minor memory leaks and improper uses of eel_ref_str_*

2007-10-26  Paolo Borelli  <pborelli@katamail.com>

	* libnautilus-private/nautilus-desktop-link.c: unref the icon instead
	of freeing it to avoid memory corruption.
